# Parameter-Importance

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
configs/: analyze_full.yaml  checkpoint_cifar_relu.yaml  checkpoint_cifar_relu_representative.yaml  checkpoint_cifar_smooth.yaml  checkpoint_cifar_smooth_representative.yaml  checkpoint_mnist.yaml  checkpoint_mnist_matched_budget.yaml  checkpoint_mnist_quadrature_targeted.yaml  continual_permuted_main.yaml  continual_permuted_mnist.yaml  continual_split_cifar100.yaml  continual_split_cifar_main.yaml  reference_mnist.yaml  report_full.yaml  simulate_full.yaml
configs/extensions/: imagenet100_vit_mae.yaml
configs/smoke/: analyze.yaml  checkpoint.yaml  continual.yaml  simulate.yaml
configs/stress/: checkpoint_cifar_augmentation_large_step.yaml  checkpoint_mnist_adamw.yaml  checkpoint_mnist_momentum.yaml  checkpoint_mnist_no_replacement.yaml
docs/: 4.19.pptx  literature.md  numerical_integration_for_parameter_importance_report.md  preregistration.md
legacy/: main_mae_subtrainset.py  supervised_vit.py  utils.py
reports/report/parameter-importance-validation-736952974cc5/: chart-map.md  checkpoint-summary.parquet  decisions.parquet  (+4 more)
src/param_importance/: __init__.py  analyze.py  checkpoint.py  cli.py  config.py  continual.py  data.py  estimators.py  gradients.py  io.py  models.py  online.py  quadrature.py  records.py  reference.py  reporting.py  simulate.py  statistics.py  utils.py
tests/: test_checkpoint.py  test_estimators.py  test_gradients.py  test_online.py  test_quadrature.py  test_resume.py
